<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_anime_places"
            android:icon="@drawable/ic_menu_anime"
            android:title="@string/menu_anime_places" />

        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_menu_bookmarks"
            android:title="@string/menu_bookmarks" />
    </group>




</menu>
