<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.otakufairtracker.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.otakufairtracker.ui.Profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_anime_places"
        android:name="com.example.otakufairtracker.ui.AnimePlaces.AnimePlacesFragment"
        android:label="@string/menu_anime_places"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.otakufairtracker.ui.Events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.example.otakufairtracker.ui.Bookmarks.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.otakufairtracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>